[package]
name = "orderhunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.10"
hyper = { version = "0.14.19", features = ["full"] }
tower = "0.4.13"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.2", features = ["derive","env"] }
anyhow = "1.0.58"
dotenv = "0.15.0"
env_logger = "0.9.0"
sqlx = { version = "0.6", features = ["mysql","runtime-tokio-native-tls",  "uuid", "time","sqlite"] }
tower-http = { version = "0.2.0", features = ["trace"] }
serde = { version = "1.0.137", features = ["derive","std"] }
serde_json = "1.0.82"
multipart = { version = "0.18.0", features = ["hyper"] }
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
futures = "0.3.21"
tokio-util = { version = "0.7.3", features = ["codec"] }
uuid = { version = "1.1.2", features = ["serde"] }
